# git-informed

./: .gitignore  install.ps1  install.sh  profile.out  pyproject.toml  start.sh
src/: main.py  project.py  projects.py
src/models/: archive_map.py  archived_map.py  category_color.py  category_map.py  github_tag_map.py  privacy_map.py  private_color_map.py  project_type.py  project_type_map.py  tables.py
